brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Partida__c/Partida__c.object-meta.xml
<CustomObject>
    <label>Partida</label>
    <nameField>
        <label>Nome de Partida</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partidas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>