brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Partida__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>