brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Partida__c/fields/Numero_Eliminados__c.field-meta.xml
<CustomField>
    <fullName>Numero_Eliminados__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Numero Eliminados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>