brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Partida__c/fields/Termino_Partida__c.field-meta.xml
<CustomField>
    <fullName>Termino_Partida__c</fullName>
    <label>Termino da Partida</label>
    <type>DateTime</type>
</CustomField>